comments resolved